[package]
name = "wgpu-sdf-cad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.0"
egui-wgpu = { version = "0.24.0", features = ["winit"] }
egui-winit = "0.24.1"
vek = "0.16.1"
pollster = "0.3.0"
wgpu = { version = "0.18.0", features = ["spirv"] }
winit = "0.28.7"